# nix-poetry-python-template

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8c93xyg6j9hqajjqwiipxmf2g822h5jp-source  gbvafd2vji5gy46210ri488asgn296hp-source  waw8n1szfiyc83br33bj4pvycxxra00p-source
.github/workflows/: ci.yml
example_app/: __init__.py  main.py
tests/main/: test_main.py
