[tool.poetry]
name = "example-app"
version = "0.1.0"
description = "A trading data scraper"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
include = ["example_app/**/*"]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
pylint = "^3.0.3"

[tool.poetry.scripts]
example-app = "example_app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint]
max-line-length = 88
disable = ["C0111", "C0114", "C0115", "C0116"]